--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /RemoteCtrl/.vs
+/RemoteCtrl/RemoteClient/Debug
+/RemoteCtrl/Debug
+/RemoteCtrl/RemoteCtrl/Debug
+/RemoteCtrl/RemoteCtrl/x64/Debug/RemoteCtrl.tlog
+/RemoteCtrl/RemoteCtrl/x64/Debug
